2008-02-24  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.getPersonalInfo):
	Wrote function.
	(PokerAvatarTestCase.test24_personalInfo): Wrote function.
	(PokerAvatarTestCase.listHands): Wrote function.
	(PokerAvatarTestCase.test25_listHands): Wrote function.

2008-02-23  Bradley M. Kuhn  <bkuhn@ebb.org>.

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test21_sitOut): Wrote function.
	(PokerAvatarTestCase.sitOut): Wrote function.
	(PokerAvatarTestCase.sitOutClosedGame): Wrote function.
	(PokerAvatarTestCase.test22_sitOutClosedGame): Wrote function.
	(PokerAvatarTestCase.test23_quitPlayerInHand): Wrote function.
	(PokerAvatarTestCase): Wrote function.
	(PokerAvatarTestCase.saveClientObject): Wrote function.

2008-02-22  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test20_turningOffAutoBlind): Wrote function.
	(PokerAvatarTestCase.noAutoBlindAnte): Wrote function.

2008-02-21  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in: Set VERBOSE_T to 0 so that
	messages are not silenced.  test18 won't work otherwise.
	(PokerAvatarTestCase.badBuyIn): Wrote function.
	(PokerAvatarTestCase.test19_badBuyIn): Wrote function.
	(PokerAvatarTestCase.joinTable): Added name and structure as
	arguments.

2008-02-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.requestsWithWrongSerial): Various changes to
	make tests succeed.
	(PokerAvatarTestCase.test18_badAttempts): user must be logged in
	and seated for correct output to occur.

2008-02-18  Loic Dachary  <loic@pokerdev.pokersource.info>

	* Release 1.3.0

	* pokernetwork/pokerclient.py: ERROR packets are no longer
	consumed by the pokerclient layer.

2008-02-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test18_badAttempts): Wrote function.
	(PokerAvatarTestCase.requestsWithWrongSerial): Wrote function.
